--- a/demo/src/main/res/layout/player_activity.xml
+++ b/demo/src/main/res/layout/player_activity.xml
@@ -14,7 +14,7 @@
 -->
 <FrameLayout android:id="@+id/root"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusable="true"
@@ -44,91 +44,10 @@
             android:layout_height="match_parent" />
 
     </com.google.android.exoplayer.AspectRatioFrameLayout>
-
-    <LinearLayout
+    <include
+        android:id="@+id/view_debug"
+        layout="@layout/view_debug"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#88000000"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/player_state_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:textSize="10sp"
-            tools:ignore="SmallSp" />
-
-        <TextView
-            android:id="@+id/debug_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:textSize="10sp"
-            tools:ignore="SmallSp" />
-
-        <LinearLayout
-            android:id="@+id/controls_root"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
-            <Button
-                android:id="@+id/video_controls"
-                style="@style/DemoButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="onButtonClick"
-                android:text="@string/video"
-                android:visibility="gone" />
-
-            <Button
-                android:id="@+id/audio_controls"
-                style="@style/DemoButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="onButtonClick"
-                android:text="@string/audio"
-                android:visibility="gone" />
-
-            <Button
-                android:id="@+id/text_controls"
-                style="@style/DemoButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="onButtonClick"
-                android:text="@string/text"
-                android:visibility="gone" />
-
-            <Button
-                android:id="@+id/master_manifest"
-                style="@style/DemoButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="onButtonClick"
-                android:text="@string/master_manifest"/>
-
-            <Button
-                android:id="@+id/verbose_log_controls"
-                style="@style/DemoButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="onButtonClick"
-                android:text="@string/logging" />
-
-            <Button
-                android:id="@+id/retry_button"
-                style="@style/DemoButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/retry"
-                android:visibility="gone" />
-
-        </LinearLayout>
-
-    </LinearLayout>
+        android:layout_height="wrap_content"/>
 
 </FrameLayout>
