--- a/demo/src/main/res/layout/view_debug_controls.xml
+++ b/demo/src/main/res/layout/view_debug_controls.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.exoplayer.demo.debug.VideoDebugControlsView android:id="@+id/debug_container"
+<com.google.android.exoplayer.demo.debug.VideoDebugView android:id="@+id/debug_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -85,4 +85,4 @@
 
     </LinearLayout>
 
-</com.google.android.exoplayer.demo.debug.VideoDebugControlsView>
+</com.google.android.exoplayer.demo.debug.VideoDebugView>
