--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -11,14 +11,26 @@
         android:layout_gravity="center"
         android:layout_weight="1"
         android:gravity="top"
-        android:hint="Enter video url" />
+        android:hint="@string/hint" />
 
-    <Button
-        android:id="@+id/continueButton"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_marginBottom="50dp"
-        android:text="Continue" />
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/clearButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_clear" />
+
+        <Button
+            android:id="@+id/continueButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_continue" />
+    </LinearLayout>
 
 </LinearLayout>
