--- a/demo/src/main/res/layout/dialog_master_manifest.xml
+++ b/demo/src/main/res/layout/dialog_master_manifest.xml
@@ -17,6 +17,7 @@
 
         <TextView
             android:id="@+id/baseUri"
+            android:textIsSelectable="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
