--- a/demo/src/main/res/layout/dialog_media_manifest.xml
+++ b/demo/src/main/res/layout/dialog_media_manifest.xml
@@ -16,6 +16,7 @@
 
         <TextView
             android:id="@+id/baseUri"
+            android:textIsSelectable="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
