--- a/demo/src/main/res/layout/view_variant.xml
+++ b/demo/src/main/res/layout/view_variant.xml
@@ -19,7 +19,8 @@
         <TextView
             android:id="@+id/url"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textIsSelectable="true" />
 
         <TextView
             android:layout_width="wrap_content"
